[gd_scene load_steps=39 format=3 uid="uid://dxc812fb4om46"]

[ext_resource type="Shader" path="res://shaders/rgb.gdshader" id="1_d0oqp"]
[ext_resource type="Script" path="res://scripts/player.gd" id="1_l5r7d"]
[ext_resource type="Texture2D" uid="uid://bngjmrsmdj0ch" path="res://sprites/shwarz-Sheet.png" id="2_a4vvp"]
[ext_resource type="Texture2D" uid="uid://dod2wc7nas6pq" path="res://sprites/hurt-animation.png" id="2_qrccj"]
[ext_resource type="Texture2D" uid="uid://bum5at2uvc0pl" path="res://sprites/shadow.png" id="3_xirlk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_obgvy"]
shader = ExtResource("1_d0oqp")
shader_parameter/dir = Vector2(0.002, 0.02)
shader_parameter/quality = 0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vsgyx"]
size = Vector2(64, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_e81j1"]
atlas = ExtResource("2_qrccj")
region = Rect2(0, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8r01"]
atlas = ExtResource("2_qrccj")
region = Rect2(75, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8pt4"]
atlas = ExtResource("2_a4vvp")
region = Rect2(0, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvhsa"]
atlas = ExtResource("2_a4vvp")
region = Rect2(75, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_juo0y"]
atlas = ExtResource("2_a4vvp")
region = Rect2(150, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_nicge"]
atlas = ExtResource("2_a4vvp")
region = Rect2(225, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_bb1pe"]
atlas = ExtResource("2_a4vvp")
region = Rect2(975, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_boo1r"]
atlas = ExtResource("2_a4vvp")
region = Rect2(1050, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_bbfnj"]
atlas = ExtResource("2_a4vvp")
region = Rect2(1125, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_43k3q"]
atlas = ExtResource("2_a4vvp")
region = Rect2(0, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_62mnf"]
atlas = ExtResource("2_a4vvp")
region = Rect2(975, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_161a0"]
atlas = ExtResource("2_a4vvp")
region = Rect2(300, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ci8qw"]
atlas = ExtResource("2_a4vvp")
region = Rect2(375, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_asiy6"]
atlas = ExtResource("2_a4vvp")
region = Rect2(450, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_tk6i5"]
atlas = ExtResource("2_a4vvp")
region = Rect2(525, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf4bd"]
atlas = ExtResource("2_a4vvp")
region = Rect2(600, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouw8s"]
atlas = ExtResource("2_a4vvp")
region = Rect2(675, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_52c6i"]
atlas = ExtResource("2_a4vvp")
region = Rect2(750, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_mxdvw"]
atlas = ExtResource("2_a4vvp")
region = Rect2(825, 0, 75, 60)

[sub_resource type="AtlasTexture" id="AtlasTexture_cm0lr"]
atlas = ExtResource("2_a4vvp")
region = Rect2(900, 0, 75, 60)

[sub_resource type="SpriteFrames" id="SpriteFrames_3agyg"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e81j1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8r01")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8pt4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvhsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_juo0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nicge")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bb1pe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_boo1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bbfnj")
}],
"loop": true,
"name": &"jab",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_43k3q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62mnf")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_161a0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ci8qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_asiy6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tk6i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf4bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouw8s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52c6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mxdvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cm0lr")
}],
"loop": true,
"name": &"walk",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rtr88"]
size = Vector2(20, 7.00003)

[sub_resource type="Animation" id="Animation_l6imt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(13, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(-27.5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Collider:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("AnimatedSprite2D:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_jr0qe"]
resource_name = "death"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(-1.5708, -0.25, 0, 0.25, 0, -1.5708, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2)
}

[sub_resource type="Animation" id="Animation_san73"]
resource_name = "hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.15)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("AnimatedSprite2D:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(17, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("AnimatedSprite2D:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_886ci"]
resource_name = "idle"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.35, 0.55, 0.9)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("AnimatedSprite2D:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(17, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("AnimatedSprite2D:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_usi20"]
resource_name = "jab"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jab"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.1, 0.3)
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D/JabAttack/JabAttackCollider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [true, false, false, true]
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position:x")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(17, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("AnimatedSprite2D:position:y")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_h28f4"]
resource_name = "jump"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.15, 0.45)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(13, -0.25, 0, 0.25, 0, 13, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0, -102, -0.25, 0, 0.25, 0, -102, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Collider:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HurtBox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, true, false]
}

[sub_resource type="Animation" id="Animation_eahwk"]
resource_name = "walk"
length = 1.08
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"walk"]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 7, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 9, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.12, 0.24, 0.36, 0.48, 0.6, 0.72, 0.84, 0.96)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:position:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(13, -0.25, 0, 0.25, 0, 13, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.6)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AnimatedSprite2D:position:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(5, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s7x7w"]
_data = {
"RESET": SubResource("Animation_l6imt"),
"death": SubResource("Animation_jr0qe"),
"hurt": SubResource("Animation_san73"),
"idle": SubResource("Animation_886ci"),
"jab_attack": SubResource("Animation_usi20"),
"jump": SubResource("Animation_h28f4"),
"walk": SubResource("Animation_eahwk")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bh3dk"]
size = Vector2(21.0001, 46)

[node name="Player" type="CharacterBody2D" groups=["player"]]
material = SubResource("ShaderMaterial_obgvy")
collision_layer = 3
collision_mask = 3
script = ExtResource("1_l5r7d")
maxHealth = 19

[node name="HurtBox" type="Area2D" parent="." groups=["hurtBoxPlayer"]]
position = Vector2(3, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("RectangleShape2D_vsgyx")
debug_color = Color(0, 0.639216, 0.360784, 0.419608)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
use_parent_material = true
position = Vector2(13, -27.5)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_3agyg")
animation = &"idle"
offset = Vector2(0, -31)

[node name="JabAttack" type="Area2D" parent="AnimatedSprite2D" groups=["hitBoxPlayer"]]

[node name="JabAttackCollider" type="CollisionShape2D" parent="AnimatedSprite2D/JabAttack" groups=["hitBox"]]
position = Vector2(17, -5)
shape = SubResource("RectangleShape2D_rtr88")
disabled = true
debug_color = Color(0, 0.917647, 0.964706, 0.419608)

[node name="AnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_s7x7w")
}

[node name="Collider" type="CollisionShape2D" parent="." groups=["hitBox", "player"]]
light_mask = 3
position = Vector2(1.49996, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_bh3dk")

[node name="Collider2" type="CollisionShape2D" parent="." groups=["hitBox", "player"]]
light_mask = 4
visibility_layer = 4
position = Vector2(1.49996, 0)
rotation = 1.5708
shape = SubResource("RectangleShape2D_bh3dk")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-9.5, 0)
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_vertical_offset = -0.8
drag_left_margin = 0.9
drag_top_margin = 0.5
drag_right_margin = 0.85
drag_bottom_margin = 1.0

[node name="Shadow" type="Sprite2D" parent="."]
visible = false
position = Vector2(7, 0)
scale = Vector2(4, 4)
texture = ExtResource("3_xirlk")

[connection signal="area_entered" from="HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="AnimatedSprite2D/JabAttack" to="." method="_on_jab_attack_area_entered"]
